--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="hero-image">
-            <img src="/images/profile.png" alt="Profile Picture">
+            <img src="images/profile.png" alt="Profile Picture">
         </div>
     </section>
 
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="/images/Aboutme.png" alt="About Image">
+                    <img src="images/Aboutme.png" alt="About Image">
                 </div>
             </div>
         </div>
@@ -121,7 +121,7 @@
             <h2 class="section-title">My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="/images/Dromlocaation.png" alt="Project 1">
+                    <img src="images/Dromlocaation.png" alt="Project 1">
                     <div class="project-info">
                         <h3>DormLocator</h3>
                         <p>A web application built with React, Tailwind CSS, and Firebase that helps students find dormitories near the university.</p>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="/images/CoffeeShop.png" alt="Project 2">
+                    <img src="images/CoffeeShop.png" alt="Project 2">
                     <div class="project-info">
                         <h3>Coffee Shop Website</h3>
                         <p>This website presents menus, promotions, and a contact form. It includes a backend panel for the owner to update content.</p>
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="/images/tertris.png" alt="Project 3">
+                    <img src="images/tertris.png" alt="Project 3">
                     <div class="project-info">
                         <h3>Tetris Game (Mini Project)</h3>
                         <p>A classic Tetris game built with JavaScript and HTML5 Canvas. This project demonstrates my understanding of game loops, collision detection, and key event handling.</p>
