--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>TANAPAT - Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+
 <body>
     <!-- Navigation -->
     <nav class="navbar">
@@ -21,6 +24,15 @@
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
+            </ul>
+            <ul class="nav-menu">
+                <!-- Dark ModeTogle-->
+                <li>
+                    <button id="darkModeToggle" class="btn-darkMode">
+                        <span class="icon light fas fa-sun"></span>
+                        <span class="icon dark fas fa-moon"></span>
+                    </button>
+                </li>
             </ul>
             <div class="nav-toggle">
                 <span class="bar"></span>
@@ -52,7 +64,8 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I am a passionate Full Stack Developer with experience in creating web applications using modern technologies. 
+                    <p>I am a passionate Full Stack Developer with experience in creating web applications using modern
+                        technologies.
                         I love solving complex problems and learning new technologies.</p>
                     <div class="about-stats">
                         <div class="stat-item">
@@ -124,7 +137,8 @@
                     <img src="images/Dromlocaation.png" alt="Project 1">
                     <div class="project-info">
                         <h3>DormLocator</h3>
-                        <p>A web application built with React, Tailwind CSS, and Firebase that helps students find dormitories near the university.</p>
+                        <p>A web application built with React, Tailwind CSS, and Firebase that helps students find
+                            dormitories near the university.</p>
                         <div class="project-links">
                             <a href="#" class="btn btn-small">Live Demo</a>
                             <a href="#" class="btn btn-small btn-secondary">GitHub</a>
@@ -135,7 +149,8 @@
                     <img src="images/CoffeeShop.png" alt="Project 2">
                     <div class="project-info">
                         <h3>Coffee Shop Website</h3>
-                        <p>This website presents menus, promotions, and a contact form. It includes a backend panel for the owner to update content.</p>
+                        <p>This website presents menus, promotions, and a contact form. It includes a backend panel for
+                            the owner to update content.</p>
                         <div class="project-links">
                             <a href="#" class="btn btn-small">Live Demo</a>
                             <a href="#" class="btn btn-small btn-secondary">GitHub</a>
@@ -146,7 +161,8 @@
                     <img src="images/tertris.png" alt="Project 3">
                     <div class="project-info">
                         <h3>Tetris Game (Mini Project)</h3>
-                        <p>A classic Tetris game built with JavaScript and HTML5 Canvas. This project demonstrates my understanding of game loops, collision detection, and key event handling.</p>
+                        <p>A classic Tetris game built with JavaScript and HTML5 Canvas. This project demonstrates my
+                            understanding of game loops, collision detection, and key event handling.</p>
                         <div class="project-links">
                             <a href="#" class="btn btn-small">Live Demo</a>
                             <a href="#" class="btn btn-small btn-secondary">GitHub</a>
@@ -215,4 +231,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
