Peach: updated pill button(tooltip) text overflow

--- a/index.html
+++ b/index.html
@@ -32,17 +32,19 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-content">
-            <h1 id="h1"></h1>
-            <p id="p1" class="hero-subtitle"></p>
-            <p id="p2" class="hero-description"></p>
-            <div class="hero-buttons">
-                <a href="#projects" class="btn btn-primary">View My Work</a>
-                <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+        <div class="container">
+            <div class="hero-content">
+                <h1 id="h1"></h1>
+                <p id="p1" class="hero-subtitle"></p>
+                <p id="p2" class="hero-description"></p>
+                <div class="hero-buttons">
+                    <a href="#projects" class="btn btn-primary">View My Work</a>
+                    <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+                </div>
             </div>
-        </div>
-        <div class="hero-image">
-            <img src="images/profile.png" alt="Profile Picture">
+            <div class="hero-image">
+                <img src="images/profile.png" alt="Profile Picture">
+            </div>
         </div>
     </section>
 
