--- a/index.html
+++ b/index.html
@@ -33,17 +33,23 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="container">
-            <div class="hero-content">
-                <h1 id="h1"></h1>
-                <p id="p1" class="hero-subtitle"></p>
-                <p id="p2" class="hero-description"></p>
-                <div class="hero-buttons">
-                    <a href="#projects" class="btn btn-primary">View My Work</a>
-                    <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+            <div class="hero-main">
+                <div class="hero-content">
+                    <div class="hero-text">
+                        <span id="titleText" class="hero-title"></span>
+                        <span id="highlightText" class="hero-highlight"></span>
+                        <span id="subtitleText" class="hero-subtitle"></span>
+                        <span id="descriptionText" class="hero-description"></span>
+                        <span id="cursor" class="cursor">|</span>
+                    </div>
+                    <div class="hero-buttons">
+                        <a href="#projects" class="btn btn-primary">View My Work</a>
+                        <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+                    </div>
                 </div>
-            </div>
-            <div class="hero-image">
-                <img src="images/profile.png" alt="Profile Picture">
+                <div class="hero-image">
+                    <img src="images/profile.png" alt="Profile Picture">
+                </div>
             </div>
         </div>
     </section>
