--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </head>
 
 <body>
+    <!--Loadinng Screen-->
+    <div id="loading-overlay" class="loader">
+        <div class="progress-bar">
+            <div class="progress-fill"></div>
+        </div>
+        <div class="loading-text">Loading...</div>
+    </div>
+
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
