--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <!--Progress Bar-->
+    <div id="scroll-progress-indicator"></div>
+    
     <!--Loadinng Screen-->
     <div id="loading-overlay" class="loader">
         <div class="progress-bar">
