peach: back-to-top btn & typewriting effect /w blinking cursor (done)

--- a/index.html
+++ b/index.html
@@ -36,17 +36,10 @@
             <div class="hero-main">
                 <div class="hero-content">
                     <div class="hero-text">
-                        <h1 class="hero-title">
-                            <span id="titleText"></span>
-                            <span id="highlightText" class="hero-highlight"></span>
-                        </h1>
-
-                        <p class="hero-subtitle">
-                            <span id="subtitleText" ></span>
-                        </p>
-                        <p class="hero-description">
-                            <span id="descriptionText" ></span>   
-                        </p>
+                        <span id="titleText" class="hero-title"></span>
+                        <span id="highlightText" class="hero-highlight"></span>
+                        <span id="subtitleText" class="hero-subtitle"></span>
+                        <span id="descriptionText" class="hero-description"></span>
                         <span id="cursor" class="cursor"></span>
                     </div>
                     <div class="hero-buttons">
